--- a/.github/workflows/class_diagram.yml
+++ b/.github/workflows/class_diagram.yml
@@ -27,7 +27,10 @@ jobs:
       - name: Create PR Comment File
         run: echo "![Mermaid Image](output.svg)" > pr_description.txt
 
-      - name: Display Image in PR Description
-        run: gh pr review -c $GITHUB_SHA --body-file pr_description.txt
+      - name: Update PR Description
+        run: |
+          PR_NUMBER=$(jq --raw-output .pull_request.number "$GITHUB_EVENT_PATH")
+          COMMENT=$(cat pr_description.txt | jq -Rs .)
+          curl -sSL -H "Authorization: token $GITHUB_TOKEN" -H "Content-Type: application/json" -X POST -d "{\"body\": $COMMENT}" "https://api.github.com/repos/$GITHUB_REPOSITORY/issues/$PR_NUMBER/comments"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
