--- a/.github/workflows/class_diagram.yml
+++ b/.github/workflows/class_diagram.yml
@@ -27,12 +27,13 @@ jobs:
       - name: Create PR Comment File
         run: echo "![Mermaid Image](output.svg)" > pr_description.txt
 
-      - name: Update PR Description
+      - name: Update PR Comment
         run: |
-          PR_NUMBER=$(jq --raw-output .pull_request.number "$GITHUB_EVENT_PATH")
-          COMMENT=$(cat pr_description.txt)
-          URL="https://api.github.com/repos/$GITHUB_REPOSITORY/issues/$PR_NUMBER/comments"
-          RESPONSE=$(curl -L -X POST -H "Accept: application/vnd.github+json" -H "Authorization: Bearer $GITHUB_TOKEN" -H "X-GitHub-Api-Version: 2022-11-28" "$URL" -d "{\"body\":\"$COMMENT\"}")
-          echo "PR Comment Response: $RESPONSE"
+          PR_NUMBER=2
+          COMMENT_ID=1  # Replace with the ID of the comment you want to edit
+          COMMENT="New comment text"
+          URL="https://api.github.com/repos/OWNER/REPO/issues/$PR_NUMBER/comments/$COMMENT_ID"
+          RESPONSE=$(curl -L -X PATCH -H "Accept: application/vnd.github.v3+json" -H "Authorization: Bearer ${{ secrets.TOKEN }}" -H "X-GitHub-Api-Version: 2022-11-28" "$URL" -d "{\"body\":\"$COMMENT\"}")
+          echo "PR Comment Edit Response: $RESPONSE"
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.TOKEN }}
