--- a/.github/workflows/class_diagram.yml
+++ b/.github/workflows/class_diagram.yml
@@ -32,7 +32,7 @@ jobs:
           PR_NUMBER=2
           COMMENT_ID=1  # Replace with the ID of the comment you want to edit
           COMMENT="New comment text"
-          URL="https://api.github.com/repos/OWNER/REPO/issues/$PR_NUMBER/comments/$COMMENT_ID"
+          URL="https://api.github.com/repos/$GITHUB_REPOSITORY/issues/$PR_NUMBER/comments/$COMMENT_ID"
           RESPONSE=$(curl -L -X PATCH -H "Accept: application/vnd.github.v3+json" -H "Authorization: Bearer ${{ secrets.TOKEN }}" -H "X-GitHub-Api-Version: 2022-11-28" "$URL" -d "{\"body\":\"$COMMENT\"}")
           echo "PR Comment Edit Response: $RESPONSE"
         env:
